fix for body overflowing window

--- a/media/_themes/unm-v1-2col/media-screen-breakpoints/large.css.d/body-2col.css
+++ b/media/_themes/unm-v1-2col/media-screen-breakpoints/large.css.d/body-2col.css
@@ -2,11 +2,13 @@
   .digraph-area-wrapper {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
   }
 }
 
 #body-2col-body {
   flex-grow: 1;
+  max-width: 100%;
 }
 
 #body-2col-extra {
